Prevent connection activation from freezing plasma-desktop for a few seconds.

BUG: 286424